# zk-explorer

./: .gitignore  Cargo.toml  README.md
builder/: Cargo.toml
builder/src/: build.rs  main.rs  utils.rs
builder/src/wasm/: build.rs  mod.rs  templates.rs
client/: README.md  package.json
client/app/: globals.css  layout.tsx  page.tsx
client/app/images/[id]/: columns.tsx  data-table.tsx  page.tsx
client/app/images/new/: page.tsx
client/app/playground/: page.tsx
client/app/sessions/[id]/: page.tsx
client/components/: CopyClipboardButton.tsx  Footer.tsx  GenerateProofButton.tsx  Header.tsx  ModeToggle.tsx  PresetSelector.tsx  Search.tsx  WatViewer.tsx
client/constants/: api.ts
client/utils/: strings.ts
server/: Cargo.toml
server/src/: db.rs  error.rs  main.rs
server/src/services/: mod.rs  proof_image.rs  proof_session.rs
server/src/utils/: archive.rs  ipfs.rs  mod.rs
server/src/web/: mod.rs  routes_image.rs  routes_proofs.rs  routes_prove.rs  routes_verify.rs  session.rs
src/: main.rs
src/web/: mod.rs  routes_prove.rs
