[package]
name = "builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.24", features = ["derive"] }
w3s = { version = "0.2", features = ["all"] }
tokio = { version = "1.32.0", features = ["full"] }
risc0-zkvm = { version = "0.17.0" }
hex = "0.4.3"
rand = "0.8.5"
bincode = "1.3.3"
