[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.4", features = ["fs"] }
risc0-zkvm = { version = "0.17.0" }
bincode = "1.3"
reqwest = { version = "0.11.19", features = ["blocking"] }
flate2 = "1.0"
tar = "0.4"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]