[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.4", features = ["fs", "cors"] }
risc0-zkvm = { version = "0.17.0" }
bincode = "1.3"
reqwest = { version = "0.11.19", features = ["blocking", "multipart"] }
flate2 = "1.0"
tar = "0.4"
hex = "0.4.3"
surrealdb = "1.0.0-beta.9"
uuid = "1.4.1"
rand = "0.8.5"
w3s = { version = "0.2", features = ["all"] }

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
